--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "jquery-scrollbuttons": "^0.1.0",
     "next": "10.2.3",
+    "perfect-scrollbar": "^1.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-responsive-carousel": "^3.2.18"
